--- a/hoopSite.html
+++ b/hoopSite.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Zumba Hoop</title>
-
+//this is a test 
     <style>
       body {
         background-color: rgb(44, 102, 154);
