--- a/homePage.html
+++ b/homePage.html
@@ -12,39 +12,39 @@
       width: 50%;
       border: 3px;
       padding: 10px;
-      text-align: center; /* Center text within the .header div */
+      text-align: center; 
     }
 
     .header img {
-      /* display: block; */
+
       margin: auto;
       width: 80%;
     }
 
     .header h1,
     .header p {
-      margin: 10px 0; /* Add margin as needed for spacing */
+      margin: 10px 0; 
     }
 
     .homeImages {
       display: flex;
-      flex-wrap: wrap; /* Allow items to wrap to the next line */
+      flex-wrap: wrap; 
       justify-content: center;
       align-items: center;
     }
 
     .homeImages img {
       margin: 10px;
-      max-width: 70%; /* Ensure images don't exceed their container width */
+      max-width: 70%; 
     }
 
     .homeImages h1,
     .homeImages h2 {
-      text-align: center; /* Center text within the .homeImages div */
+      text-align: center; 
     }
 
     .homeButtons {
-      text-align: center; /* Center the buttons within the .homeButtons div */
+      text-align: center; 
     }
 
     .homeButtons button {
