--- a/hoopSite.html
+++ b/hoopSite.html
@@ -12,7 +12,8 @@
   </head>
 
   <body>
-    <script src = "hoopScript.js">
-    </script>
+    <div id="mainContent">
+    </div>
+    <script src="hoopScript.js"></script>
   </body>
 </html>
