--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <img src="hulahoop.jpg" alt="hulaHooper" />
             <h1>FEATURE PRODUCT B</h1>
             <h2>$27.99</h2>
+            test
         </div>
 
         <div class="homeButtons">
