--- a/index.html
+++ b/index.html
@@ -1,33 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Zumba Hoop</title>
-        <link rel="stylesheet" href="./shared-styles.css" />
-        <link rel="stylesheet" href="./index.css" />
-    </head>
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Zumba Hoop</title>
+    <link rel="stylesheet" href="./shared-styles.css" />
+    <link rel="stylesheet" href="./index.css" />
+    <style>
+        .homeImages {
+            text-align: center;
+        }
+        .product-info {
+            margin-top: 10px;
+        }
+        .product-info h1,
+        .product-info h2 {
+            margin: 5px 0;
+        }
+    </style>
+</head>
+<body>
+    <div class="header">
+        <img src="logo.png" alt="logo" />
+        <h1>Welcome to Zumba Hoop!</h1>
+        <p>Spin into joy, tone with Bliss.</p>
+    </div>
 
-    <body>
-        <div class="header">
-            <img src="logo.png" alt="logo" />
-            <h1>Welcome to Zumba Hoop!</h1>
-            <p>Spin into joy, tone with Bliss.</p>
-        </div>
-
-        <div class="homeImages">
+    <div class="homeImages">
+        <div class="product">
             <img src="productOne.png" alt="prodOne" />
-            <h1>Feature Product A</h1>
-            <h2>$19.99</h2>
-
-            <img src="hulahoop.jpg" alt="hulaHooper" />
-            <h1>FEATURE PRODUCT B</h1>
-            <h2>$27.99</h2>
+            <div class="product-info">
+                <h1>Feature Product A</h1>
+                <h2>$19.99</h2>
+            </div>
         </div>
 
-        <div class="homeButtons">
-            <button><a href="./about-us/">About Us</a></button>
-            <button><a href="./contact-info/">Contact Info</a></button>
+        <div class="product">
+            <img src="hulahoop.png" alt="hulaHooper" />
+            <div class="product-info">
+                <h1>FEATURE PRODUCT B</h1>
+                <h2>$27.99</h2>
+            </div>
         </div>
-    </body>
+    </div>
+
+    <div class="homeButtons">
+        <button><a href="./about-us/">About Us</a></button>
+        <button><a href="./contact-info/">Contact Info</a></button>
+    </div>
+</body>
 </html>
