--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
         .homeImages {
             text-align: center;
         }
+
+        .productOne{
+            margin-left: 10 px;
+        }
+        .productTwo{
+            margin-right: 10px;
+        }
         .product-info {
             margin-top: 10px;
         }
@@ -27,15 +34,15 @@
     </div>
 
     <div class="homeImages">
-        <div class="product">
+        <div class="productOne">
             <img src="productOne.png" alt="prodOne" />
             <div class="product-info">
                 <h1>Feature Product A</h1>
                 <h2>$19.99</h2>
             </div>
-        </div>
+    </div>
 
-        <div class="product">
+        <div class="productTwo">
             <img src="hulahoop.png" alt="hulaHooper" />
             <div class="product-info">
                 <h1>FEATURE PRODUCT B</h1>
