--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
 
         .productOne{
             margin-left: 10 px;
+            margin-right: 100px;
         }
         .productTwo{
+            margin-left: 100px;
             margin-right: 10px;
         }
         .product-info {
