--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
         }
 
         .productOne{
-            margin-left: 5 px;
+            /*margin-left: 5 px;*/
             margin-right: 200px;
         }
         .productTwo{
             margin-left: 200px;
-            margin-right: 5px;
+            /*margin-right: 5px;*/
         }
         .product-info {
             margin-top: 10px;
