--- a/index.html
+++ b/index.html
@@ -1,33 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Zumba Hoop</title>
     <link rel="stylesheet" href="./shared-styles.css" />
     <link rel="stylesheet" href="./index.css" />
+
+
     <style>
         .homeImages {
             text-align: center;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 200px;
+            overflow: hidden;
         }
 
-        .productOne{
-            /*margin-left: 5 px;*/
-            margin-right: 200px;
+        .productOne,
+        .productTwo {
+            flex: 1;
+            position: relative;
         }
-        .productTwo{
-            margin-left: 200px;
-            /*margin-right: 5px;*/
+
+        .productOne img,
+        .productTwo img {
+            width: 100%;
+            max-width: 300px;
+            height: auto;
         }
+
         .product-info {
-            margin-top: 10px;
+            position: absolute;
+            top: 200px;
+            bottom: 10px;
+            left: 50%;
+            transform: translateX(-50%);
+            background-color: rgba(255, 255, 255, 0.8);
+            padding: 10px;
+            border-radius: 5px;
+            text-align: center;
         }
-        .product-info h1,
+
+        /* .product-info h1,
         .product-info h2 {
             margin: 5px 0;
+        } */
+
+        .scroll-panel {
+            width:600px; /* Set your desired height */
+            height: 430px;
+            overflow-y: auto;
+            padding: 10px;
+            background-color: #f7f7f7;
+            border: 1px solid #ccc;
+            margin: 0 20px;
+        }
+
+        .homeButtons {
+            text-align: center;
+            margin-top: 20px;
+        }
+
+        .homeButtons button {
+            margin: 5px;
+        }
+
+        .homeButtons button a {
+            text-decoration: none;
+            color: inherit;
         }
     </style>
 </head>
+
 <body>
     <div class="header">
         <img src="logo.png" alt="logo" />
@@ -42,7 +89,10 @@
                 <h1>Feature Product A</h1>
                 <h2>$19.99</h2>
             </div>
-    </div>
+        </div>
+
+        <div class="scroll-panel">
+        </div>
 
         <div class="productTwo">
             <img src="hulahoop.png" alt="hulaHooper" />
@@ -58,4 +108,5 @@
         <button><a href="./contact-info/">Contact Info</a></button>
     </div>
 </body>
+
 </html>
